--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ol>
       </nav>
       <figure>
-        <img src="images/index-608.png" alt="">
+        <img src="images/beets.jpg" alt="">
         <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
       </figure>
       <p>55 to 65 days are needed from germination to harvest of the root.</p>
