--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif" rel="stylesheet">
 </head>
 <body>
 
@@ -21,10 +21,12 @@
           <li><a href="#">Tags</a></li>
         </ol>
       </nav>
+
       <figure>
         <img src="images/beets.jpg" alt="">
         <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
       </figure>
+
       <p>55 to 65 days are needed from germination to harvest of the root.</p>
       <p>The usually deep purple rootd of <b>beetroot</b> are eaten either grilld, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable. </p>
       <p>In fact,<cite>Jim Halpert</cite> once said this about beets,<q>"Facr, bears eat beets, Bears, beets <i>Battlestar Galactica</i>"</q></p>
